# Evanesco

./: .gitignore  .justfile  CHANGELOG.md  CMakeLists.txt  Evanesco.iss  README.md
lib/evanesce/: CMakeLists.txt  evanesce.cpp  justfile
lib/invisibilis/: CMakeLists.txt  justfile
lib/invisibilis/src/: invisibilis.cpp
lib/revela/: CMakeLists.txt  justfile  revela.cpp
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  autohider.cpp  autohider.h  hashutils.cpp  hashutils.h  ipcutils.cpp  ipcutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prefdialog.cpp  prefdialog.h  prefdialog.ui  processwatcher.cpp  processwatcher.h  procutils.cpp  procutils.h  randutils.cpp  randutils.h  settings.cpp  settings.h  tempfile.cpp  tempfile.h  titleutils.cpp  titleutils.h  version.h  windowhider.cpp  windowhider.h
